[package]
name = "lipong"
description = "Pong for Project Lighthouse"
version = "1.0.4"
edition = "2021"
license = "MIT"
repository = "https://github.com/fwcd/lipong"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures = "0.3.31"
lighthouse-client = "5.1.4"
rand = "0.9.0"
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
